Remove unused messages from the XQuery bundle file.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,7 +1,6 @@
 annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
-browser.choose-main-module=Choose Main Module
 find-usages.identifier=Identifier
 inspection.XPST0003.final-statement-semicolon.display-name=Scripting final semicolon
 inspection.XPST0003.final-statement-semicolon.required=XPST0003: {0} requires '';'' at the end of each statement.
@@ -52,7 +51,9 @@ parser.error.expected-property-value-string=XPST0003: Missing property value str
 parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-query-body=XPST0003: Missing query body.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
+# suppress inspection "UnusedProperty"
 parser.error.expected-variable-assign-scripting=XPST0003: Missing ':=' variable assignment, ',' or ';'.
+# suppress inspection "UnusedProperty"
 parser.error.expected-variable-assign-scripting-no-type-decl=XPST0003: Missing ':=' variable assignment, 'at', ',' or ';'.
 parser.error.expected-variable-assign-or-keyword=XPST0003: Missing variable assignment operator ''':=''' or keyword: {0}.
 parser.error.expected-variable-reference-or-keyword=XPST0003: Missing variable reference marker '''$''' or keyword: {0}.
@@ -90,19 +91,6 @@ parser.error.wildcard.whitespace-after-local-part=XPST0003: Whitespace is not al
 # suppress inspection "UnusedProperty"
 parser.error.wildcard.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a wildcard.
 parser.error.wildcard.both-prefix-and-local-wildcard=XPST0003: Wildcard prefix and local parts are not allowed.
-requires.empty-expression.version=XPST0003: Empty enclosed expressions requires XQuery {0} or later.
-requires.error.marklogic-json-keyword-as-function-name=XPST0003: This function name conflicts with MarkLogic JSON KindTest keywords.
-requires.error.reserved-keyword-as-function-name=XPST0003: Reserved keyword used as a function name.
-requires.error.scripting-keyword-as-function-name=XPST0003: Reserved Scripting Extension {0} keyword used as a function name.
-requires.feature.basex.version=XPST0003: This expression requires BaseX {0} or later.
-requires.feature.marklogic.version=XPST0003: This expression requires MarkLogic {0} or later with XQuery version ''1.0-ml''.
-requires.feature.marklogic-xquery.version=XPST0003: This expression requires XQuery 3.0 or later, or MarkLogic 6.0 or later with XQuery version '1.0-ml'.
-requires.feature.marklogic-9-xquery.version=XPST0003: This expression requires XQuery 3.1 or later, or MarkLogic 9.0 or later with XQuery version '1.0-ml'.
-requires.feature.minimal-conformance.version=XPST0003: This expression requires XQuery {0} or later.
-requires.feature.saxon-map-entry-assign.version=XPST0003: Use ':=' for Saxon 9.4 to 9.6, and ':' for XQuery 3.1 and MarkLogic.
-requires.feature.saxon-xquery.version=XPST0003: This expression requires XQuery 3.1 or later, or Saxon 9.4 or later.
-requires.feature.scripting.version=XPST0003: This expression requires Scripting Extension {0} or later.
-requires.feature.update-facility.version=XPST0003: This expression requires Update Facility {0} or later.
 xquery.files.filetype.description=XQuery Language Support
 xquery.settings.colors.annotation=Annotation
 xquery.settings.colors.bad.character=Invalid Character
