Improve parser recovery of empty scripting/transaction blocks like in '1;;2;'.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -50,6 +50,7 @@ parser.error.expected-prolog-body=XPST0003: Prolog header statements must be pla
 parser.error.expected-property-value-string=XPST0003: Missing property value string.
 parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-query-body=XPST0003: Missing query body.
+parser.error.expected-query-statement=XPST0003: Empty query statement before ''{0}''.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
 # suppress inspection "UnusedProperty"
 parser.error.expected-variable-assign-scripting=XPST0003: Missing ':=' variable assignment, ',' or ';'.
