XQueryParser: Implement Saxon 9.8 UnionType.

--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,8 @@ src/test/resources/tests/parser/marklogic-8.0/*.txt text eol=lf
 src/test/resources/tests/parser/marklogic-8.0/*.xq text eol=lf
 src/test/resources/tests/parser/saxon-9.4/*.txt text eol=lf
 src/test/resources/tests/parser/saxon-9.4/*.xq text eol=lf
+src/test/resources/tests/parser/saxon-9.8/*.txt text eol=lf
+src/test/resources/tests/parser/saxon-9.8/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-1.0/*.txt text eol=lf
 src/test/resources/tests/parser/xquery-1.0/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-3.0/*.txt text eol=lf
