--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@ src/test/resources/tests/parser/basex-7.8/*.txt text eol=lf
 src/test/resources/tests/parser/basex-7.8/*.xq text eol=lf
 src/test/resources/tests/parser/basex-8.5/*.txt text eol=lf
 src/test/resources/tests/parser/basex-8.5/*.xq text eol=lf
+src/test/resources/tests/parser/full-text-1.0/*.txt text eol=lf
+src/test/resources/tests/parser/full-text-1.0/*.xq text eol=lf
 src/test/resources/tests/parser/marklogic-6.0/*.txt text eol=lf
 src/test/resources/tests/parser/marklogic-6.0/*.xq text eol=lf
 src/test/resources/tests/parser/marklogic-7.0/*.txt text eol=lf
