--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,7 @@
     <ol>
       <li>Fix tokenizing <code>`{...}`</code> expressions outside XQuery 3.1 string interpolation contexts.</li>
       <li>Report a parser error when a TypedFunctionTest does not have a return type clause.</li>
+      <li>Report a parse error when an unpaired <code>}</code> is used in direct element contents.</li>
       <li>Fix parsing pragmas with EQNames, and optional pragma contents.</li>
       <li>Fix resolving functions referenced in the current library module.</li>
       <li>Fix support for ProcessCanceledException thrown when creating PSI nodes.</li>
