--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -74,7 +74,7 @@ parser.error.incomplete-open-tag=XPST0003: Expected '>', '/>' or attribute name.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
 parser.error.incomplete-string-constructor=XPST0003: Unclosed string constructor.
 parser.error.incomplete-xml-comment=XPST0003: Unclosed XML comment.
-parser.error.mismatched-exclosed-expr=XPST0003: Closing expression block '}' without associated open expression block '{'.
+parser.error.mismatched-exclosed-expr=XPST0003: Unescaped '}' without a paired open expression block '{'.
 parser.error.misplaced-entity=XPST0003: Entity references are not allowed here.
 parser.error.multiple-marklogic-catch-clause=XPST0003: Only one MarkLogic CatchClause is allowed.
 parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in qualified name.
