--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
-    ext.junit_milestone = '-RC2' // IntelliJ 2017.2.3
+    ext.junit_milestone = ''
     ext.kotlin_version = '1.1.4-2'
+
     repositories {
         maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap-1.1' }
