--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 buildscript {
+    ext.idea_version = System.getenv("IDEA_VERSION") ?: 'IC-2017.2'
     ext.junit_milestone = ''
     ext.kotlin_version = '1.1.4-2'
 
@@ -43,8 +44,7 @@ dependencies {
 }
 
 intellij {
-    def ideaVersion = System.getenv("IDEA_VERSION")
-    version = ideaVersion ? ideaVersion : 'IC-2017.2' // IntelliJ IDEA dependency
+    version = idea_version
     println "Building for IntelliJ version: ${version}"
 
     plugins 'coverage'  // Bundled plugin dependencies
