xquery-intellij-plugin 1.0

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,7 +13,7 @@
   ]]></description>
 
   <change-notes><![CDATA[
-    <h3>Release 0.6-dev:</h3>
+    <h3>Release 1.0:</h3>
     <p>Language Support:</p>
     <ol>
       <li>Full Text 1.0 and 3.0 support.</li>
