--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ allprojects {
     apply plugin: 'jacoco'
 
     group 'uk.co.reecedunn.intellij.plugin.xquery'
-    version '1.0'
+    version '1.1-dev'
 
     repositories {
         mavenCentral()
