Include building with 2017.3 on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ sudo: required
 jdk:
   - oraclejdk8
 
-# EAP, Stable, Previous, (Old)
+# EAP, Stable, Previous, Old
 env:
   - IDEA_VERSION=LATEST-EAP-SNAPSHOT
+  - IDEA_VERSION=IC-2017.3
   - IDEA_VERSION=IC-2017.2
   - IDEA_VERSION=IC-2017.1
 
