--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 }
 
 plugins {
-    id "org.jetbrains.intellij" version "0.1.10" // 0.2.0 and later break loading resources from a class loader.
+    id "org.jetbrains.intellij" version "0.2.17"
 }
 
 apply plugin: 'org.jetbrains.intellij'
