--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -23,6 +23,8 @@ inspection.XQST0033.duplicate-namespace-prefix.display-name=Duplicate namespace 
 inspection.XQST0033.duplicate-namespace-prefix.message=XQST0033: The namespace prefix ''{0}'' has already been defined.
 inspection.XQST0047.duplicate-namespace-uri.display-name=Duplicate namespace uri
 inspection.XQST0047.duplicate-namespace-uri.message=XQST0047: The namespace uri ''{0}'' has already been defined.
+inspection.XQST0118.mismatched-dir-elem-tag-name.display-name=Mismatched XML element tags
+inspection.XQST0118.mismatched-dir-elem-tag-name.message=XQST0118: The closing tag ''{0}'' does not match the open tag ''{1}''.
 parser.error.as-not-supported-in-test=XPST0003: Return type specifiers not supported in ''{0}''.
 parser.error.cdata-section-not-in-element-content=XPST0003: CDATA sections must be placed within element tags.
 parser.error.comparison-no-lhs-or-direlem=XPST0003: Comparison without left-hand expression, or incomplete direct element constructor.
