--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,14 @@
 buildscript {
+    ext.since_from_version = { version ->
+        def since = version =~ /[A-Z]+-20([0-9][0-9])\.([1-3])(\.[0-9]+)?/ // e.g. IC-2017.3
+        if (since.matches()) {
+            return "${since.group(1)}${since.group(2)}"
+        }
+        return "161"
+    }
+
     ext.idea_version = System.getenv("IDEA_VERSION") ?: 'IC-2017.3'
+    ext.idea_since_build = ext.since_from_version(ext.idea_version)
     ext.junit_milestone = ''
     ext.kotlin_version = '1.1.4-2'
 
@@ -45,10 +54,17 @@ dependencies {
 
 intellij {
     version = idea_version
-    println "Building for IntelliJ version: ${version}"
+    println "Building for IntelliJ version '${version}', since build '${idea_since_build}'"
+
+    updateSinceUntilBuild = true
+    sameSinceUntilBuild = true // 'until' is an open 'since' build
 
     plugins 'coverage'  // Bundled plugin dependencies
     pluginName 'xquery-intellij-plugin'
+}
+
+patchPluginXml {
+    sinceBuild = idea_since_build
 }
 
 jacocoTestReport {
