--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -2,6 +2,7 @@ annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' 
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
 find-usages.identifier=Identifier
+fnerror.FORG0001.lexical-representation=The value does not match the lexical representation for ''{0}''.
 inspection.XPST0003.final-statement-semicolon.display-name=Scripting final semicolon
 inspection.XPST0003.final-statement-semicolon.required=XPST0003: {0} requires '';'' at the end of each statement.
 inspection.XPST0003.map-constructor-entry.display-name=Saxon map constructor entry syntax
