--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,7 +13,7 @@
   ]]></description>
 
   <change-notes><![CDATA[
-    <h3>Release 1.1-dev:</h3>
+    <h3>Release 1.1:</h3>
     <p>Language Support:</p>
     <ol>
       <li>Support using MarkLogic 8.0 <code>array-node()</code> and <code>object-node()</code> tests in <code>document-node()</code> tests.</li>
