--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ allprojects {
     apply plugin: 'jacoco'
 
     group 'uk.co.reecedunn.intellij.plugin.xquery'
-    version '1.1'
+    version '1.2-dev'
 
     repositories {
         mavenCentral()
