BaseX 8.4 NonDeterministicFunctionCall parser support.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -16,6 +16,7 @@
     <h3>Release 1.2-dev:</h3>
     <p>Language Support:</p>
     <ol>
+      <li>Support BaseX 8.4 `non-deterministic` function calls.</li>
     </ol>
     <p>Syntax Highlighting:</p>
     <ol>
