--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@ src/test/resources/tests/parser/basex-6.1/*.txt text eol=lf
 src/test/resources/tests/parser/basex-6.1/*.xq text eol=lf
 src/test/resources/tests/parser/basex-7.8/*.txt text eol=lf
 src/test/resources/tests/parser/basex-7.8/*.xq text eol=lf
+src/test/resources/tests/parser/basex-8.4/*.txt text eol=lf
+src/test/resources/tests/parser/basex-8.4/*.xq text eol=lf
 src/test/resources/tests/parser/basex-8.5/*.txt text eol=lf
 src/test/resources/tests/parser/basex-8.5/*.xq text eol=lf
 src/test/resources/tests/parser/full-text-1.0/*.txt text eol=lf
