--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -4,6 +4,9 @@ annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' 
 find-usages.identifier=Identifier
 fnerror.FORG0001.lexical-representation=The value does not match the lexical representation for ''{0}''.
 fnerror.XPTY0004.incompatible-types=Incompatible types when casting ''{0}'' to ''{1}''.
+inspection.ijvs.group-name=Vendor-specific behaviour
+inspection.xpst.group-name=XPath static errors
+inspection.xqst.group-name=XQuery static errors
 inspection.XPST0003.final-statement-semicolon.display-name=Scripting final semicolon
 inspection.XPST0003.final-statement-semicolon.required=XPST0003: {0} requires '';'' at the end of each statement.
 inspection.XPST0003.map-constructor-entry.display-name=Saxon map constructor entry syntax
